--- a/package.json
+++ b/package.json
@@ -16,5 +16,23 @@
   "bugs": {
     "url": "https://github.com/Niranjantakmare/react_template/issues"
   },
-  "homepage": "https://github.com/Niranjantakmare/react_template#readme"
+  "homepage": "https://github.com/Niranjantakmare/react_template#readme",
+  "dependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
