--- a/package.json
+++ b/package.json
@@ -57,18 +57,18 @@
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json}": [
-      "eslint --fix"
-    ],
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
   }
+  // "husky": {
+  //   "hooks": {
+  //     "pre-commit": "lint-staged"
+  //   }
+  // },
+  // "lint-staged": {
+  //   "src/**/*.{js,jsx,ts,tsx,json}": [
+  //     "eslint --fix"
+  //   ],
+  //   "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+  //     "prettier --write"
+  //   ]
+  // }
 }
